[package]
description = "Benchmark macros"
edition = "2021"
license = "MIT"
name = "puff_bench_macro"
version = "0.1.0"

[lib]
proc-macro = true

[[bin]]
name = "main"
path = "bin/main.rs"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = {version = "2", features = ["full"]}

[dev-dependencies]
puff_bench_macro = {path = "."}
